# rostam

./: .gitignore  Makefile.am  README.md  configure.ac
paper/: run.py  run_elect.sh  run_ocs.sh  run_ring.sh
src/: Makefile.am
src/compute/: Makefile.am  device.hh  gpu.cc  gpu.hh
src/executor/: Makefile.am  graph.cc  graph.hh  graph_profile.proto  op.cc  op.hh  session.cc  session.hh
src/graph_def/: Makefile.am  graph_profile.pb.cc  graph_profile.pb.h
src/interconnect/: Makefile.am  base_interconnect.cc  base_interconnect.hh  electrical_switch.cc  electrical_switch.hh  fullmesh.cc  fullmesh.hh  interconnect.hh  mordia.cc  mordia.hh  ocs.cc  ocs.hh  packet.hh  ring.cc  ring.hh  tm_estimator.cc  tm_estimator.hh  transport.cc  transport.hh
src/placement/: Makefile.am  base_placement.cc  base_placement.hh  dp.cc  dp.hh  mp.cc  mp.hh  op_partitioner.cc  op_partitioner.hh  placement.hh  strategy.cc  strategy.hh
src/scripts/: imagenet_profiler.py  run.sh  transformer_profiler.py
src/sipml/: Makefile.am  sipml-elect.cc  sipml-fullmesh.cc  sipml-ocs.cc  sipml-ring.cc
src/utils/: exit_status.hh  matrix.hh  sim_config.hh  utils.hh
